k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yyc3
  labels:
    name: yyc3
    environment: production
